[package]
name = "combine-language"
version = "3.0.3-alpha.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

build = "build.rs"

description = "Extra parser combinators, useful for parsing programming languages."

repository = "https://github.com/Marwes/combine-language"
documentation = "https://marwes.github.io/combine-language/combine_language/index.html"

readme = "README.md"

keywords = ["parser", "combinators", "ll", "language", "combine"]

license = "MIT"

[dependencies]
combine = "3.5.0"

[dev-dependencies]
skeptic = "0.9.0"

[build-dependencies]
skeptic = "0.9.0"
