[package]
name = "combine-language"
version = "4.0.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

build = "build.rs"

description = "Extra parser combinators, useful for parsing programming languages."

repository = "https://github.com/Marwes/combine-language"
documentation = "https://marwes.github.io/combine-language/combine_language/index.html"

readme = "README.md"

keywords = ["parser", "combinators", "ll", "language", "combine"]

license = "MIT"

[dependencies]
combine = "4"

[dev-dependencies]
skeptic = "0.9.0"

[build-dependencies]
skeptic = "0.9.0"
